2011-10-20  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=70539
        
        Make the 'clip' property work in variable width regions.

        Reviewed by Dan Bernstein.

        * fast/regions/positioned-objects-clipped-spanning-regions.html: Added.
        * platform/mac/fast/regions/positioned-objects-clipped-spanning-regions-expected.png: Added.
        * platform/mac/fast/regions/positioned-objects-clipped-spanning-regions-expected.txt: Added.

2011-10-20  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] FontCache::createFontPlatformData() is broken, a default font is returned
        even if the family does not match.
        https://bugs.webkit.org/show_bug.cgi?id=55036

        Unreviewed. Update tests after r97990, and unskip them. (part 4)

        * platform/qt/http/: [...]
        * platform/qt/fast/: [...]
        * platform/qt/plugins/: [...]
        * platform/qt/printing/: [...]
        * platform/qt/scrollbars/: [...]
        * platform/qt/Skipped:

2011-10-20  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] FontCache::createFontPlatformData() is broken, a default font is returned
        even if the family does not match.
        https://bugs.webkit.org/show_bug.cgi?id=55036

        Unreviewed. Update tests after r97990, and unskip them. (part 3)

        * platform/qt/editing/: [...]
        * platform/qt/fast/: [...]
        * platform/qt/Skipped:

2011-10-20  Leandro Pereira  <leandro@profusion.mobi>

        Unreviewed. Add remaining EFL baselines.

        * platform/efl/fast/html: Added.
        * platform/efl/fast/html/keygen-expected.txt: Added.
        * platform/efl/fast/html/link-rel-stylesheet-expected.txt: Added.
        * platform/efl/fast/html/listing-expected.txt: Added.
        * platform/efl/fast/html/marquee-scroll-expected.txt: Added.
        * platform/efl/fast/html/marquee-scrollamount-expected.txt: Added.
        * platform/efl/fast/loader: Added.