@@ -1,0 +1,5 @@
+This tests hit-testing in the overflow area of flipped-blocks writing mode blocks.
+
+The red rectangle should turn green when you hover over it.
+
+PASS
