@@ -1,0 +1,25 @@
+<style>
+    #target { background-color: red; }
+    #target:hover { background-color: green; }
+</style>
+<div style="margin: 100px 0 0 92px; -webkit-writing-mode: horizontal-bt; height: 100px; width: 100px;">
+    <div style="height: 100px;"></div>
+    <div id="target" style="height: 50px;"></div>
+</div>
+<p>
+    This tests hit-testing in the overflow area of flipped-blocks writing mode
+    blocks.
+</p>
+<p>
+    The red rectangle should turn green when you hover over it.
+</p>
+<p id="result">
+</p>
+<script>
+    var target = document.getElementById("target");
+    var result = document.elementFromPoint(150, 75);
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+
+    document.getElementById("result").innerText = result === target ? "PASS" : "FAIL";
+</script>
